[package]
name = "tesseras-repl"
version = "0.1.0"
authors = ["Murilo Ijanc <murilo@ijanc.org>"]
categories = ["command-line-utilities", "network-programming"]
edition = "2024"
homepage = "https://tesseras.net"
keywords = ["dht", "p2p", "repl", "kademlia", "tesseras"]
license = "ISC"
repository = "https://git.sr.ht/~ijanc/tesseras-repl"
description = "Interactive REPL for the Tesseras DHT network"

[dependencies]
anyhow = "1"
dirs = "6.0.0"
getopts = "0.2"
hex = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", default-features = false }
rustyline = { version = "15", features = ["with-file-history", "derive"] }
tempfile = "3"
tesseras-dht = { path = "../tesseras-dht" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
